Loading of acoustic models from jar files was not working on windows XP. The problem was that the method of building up the jar url from a filename was not portable across different operating systems.  The proper  way to do it is to build a File object for a path and from this, get the URI and from that get the URL.
This now works on windows XP. I shall test shortly under solaris and linux.


git-svn-id: svn+ssh://svn.code.sf.net/p/cmusphinx/code/trunk/sphinx4@2191 94700074-3cef-4d97-a70e-9c8c206c02f5